[package]
name = "harpoon"
version = "0.1.0"
authors = ["Kenji Shimizu <jrywm121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
clap = "3.0.0-beta.2"
tui = "0.13.0"
termion = { version = "1.5", optional = true }
hyperlocal = "0.7"
hyper = { version = "0.13.9", features = ["stream"] }
tokio = { version = "0.2.6", features = ["uds", "stream", "macros"] }
futures-util = "0.3.1"
async-trait = "0.1.42"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"