[package]
name = "presentation"
version = "0.1.0"
authors = ["Kenji Shimizu <jrywm121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
tui = "0.13.0"
termion = { version = "1.5", optional = true }
hyperlocal = "0.7"
infrastructure = { path = "../infrastructure" }
usecase = { path = "../usecase" }
domain = { path = "../domain" }