[package]
name = "usecase"
version = "0.1.0"
authors = ["Kenji Shimizu <jrywm121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

[dev-dependencies]
infrastructure = { path = "../infrastructure" }
usecase = { path = "../usecase" }
tokio = { version = "0.2.6", features = ["uds", "stream", "macros"] }